2007-06-19  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (load_config_file): support BUILDPLACE
	configuration.
	(parse_parameter): make it an error that BUILDPLACE is not
	set. Default is set in pbuilderrc.

	* qemubuilder.8: 
	* cowbuilder.8: update documentation for dumpconfig.

	* qemubuilder.c (cpbuilder_help): 
	* cowbuilder.c (cpbuilder_help): 
	* parameter.c (parse_parameter): add dumpconfig command.

2007-06-17  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.8: add examples

	* qemubuilder.c (qemu_arch_qemu): change x86_64/i386 logic.

2007-06-09  Junichi Uekawa  <dancer@debian.org>

	* tests/014_ilistdump_test.sh: change deprecated sort +2 to -k 2

	* tests/014_ilistdump_test.c: fix testsuite

	* Makefile: fix rules to include ilistcreate.

	* cowbuilder.c: ignore ./home

	* cow-shell.c:
	* ilistcreate.c (ilistcreate): move function, and reorganize code.

2007-06-06  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: clean up code and generally initialize variables.

	* Makefile (install): qemubuilder installed to sbin, since it
	needs root privilege

	* qemubuilder.c (copy_dscfile): support signed .dsc file.

	* parameter.h: 
	* parameter.c: new files, moved common code from cowbuilder/qemubuilder

2007-06-05  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (load_config_file): 
	* qemubuilder.c (load_config_file): set -e in sourcing configuration file.

2007-06-04  Junichi Uekawa  <dancer@debian.org>

	* tests/902_test_cowbuilder_fail.sh, etc.: skip when ran inside
	cowbuilder.

	* qemubuilder.1: document ARCH= option, and 
	add a sample pbuidlerrc

2007-05-28  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.1: document buildresult.
	* cowbuilder.8: 

	* cowbuilder.c: support buildresult

	* qemubuilder.c: support buildresult

2007-05-27  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: sync twice before shutdown.

	* qemubuilder.1: create from cowbuilder doc.

	* cowbuilder.8: fix doc
