@@ -5,8 +5,10 @@ cowdancer (0.36) UNRELEASED; urgency=low
   * add --dumpconfig option.
   * Bug fix: "cowbuilder ignores BUILDPLACE", thanks to Guido Guenther
     (Closes: #429058).
+  * Bug fix: "qemubuilder: --distribution is not honored", thanks to Ben
+    Voui (Closes: #429026).
 
- -- Junichi Uekawa <dancer@debian.org>  Tue, 19 Jun 2007 22:17:40 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Tue, 19 Jun 2007 22:24:44 +0900
 
 cowdancer (0.35) unstable; urgency=low
 
